<resources>
    <string name="app_name" translatable="false">Tap Color Tiles</string>
    <string name="title_activity_play_classic">Classic mode</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-6811565143590023/3813291595</string>
    <string name="classic">Classic</string>
    <string name="time">Time mode</string>
    <string name="rules">Rules</string>
    <string name="restart">Restart</string>
    <string name="share">Share</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="achievements">Achievements</string>
    <string name="second_sign">s</string>
    <string name="title_activity_rules" translatable="false">RulesActivity</string>
    <string name="rules_classic">Standard mode\n\n- Tap color tiles to make them white\n- Number of them is constantly increasing
        \n- Game ends if white tile clicked or\n- Game ends if all the tiles became color</string>
    <string name="rules_time_a">Time mode. Seconds\n\n- Choose the time you want (10s - 45s)\n- There is only one color tile at the moment
        \n- Try to tap as much color tiles as possible\n- You lose if you tap white tile</string>
    <string name="rules_time_b">Time mode. Tiles\n\n- Choose number of tiles you want (20 - 90)\n- There is only one color tile at the moment
        \n- Try to tap all color tiles as fast as possible\n- You lose if you tap white tile</string>
    <string name="title_activity_play_time" translatable="false">Play for Time</string>
    <string name="seconds">Seconds</string>
    <string name="tiles">Tiles</string>
    <string name="fail">Fail</string>
    <string name="i_stayed">I clicked&#160;</string>
    <string name="in_tap_black"><![CDATA[ tiles in Tap Color Tiles! Can you beat me? https://play.google.com/store/apps/details?com.ivanzhur.tapblack]]></string>
    <string name="i_have_clicked">I have clicked&#160;</string>
    <string name="i_failed">I failed it Tap Color Tiles! Can you do so? https://play.google.com/store/apps/details?com.ivanzhur.tapblack</string>
    <string name="tiles_in">&#160;tiles in&#160;</string>
    <string name="seconds_can_more">&#160;seconds! Can you click more? https://play.google.com/store/apps/details?com.ivanzhur.tapblack</string>
    <string name="tiles_just_in">&#160;tiles just in&#160;</string>
    <string name="seconds_can_faster">&#160;seconds! Can you click faster? https://play.google.com/store/apps/details?com.ivanzhur.tapblack</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_leaderboard" translatable="false">Leaderboard Activity</string>
    <string name="classic_not_exist">No classic high score</string>
    <string name="time_not_exist">No time high score</string>
    <string name="tiles_not_exist">No tiles high score</string>
    <string name="button_classic">Classic</string>
    <string name="button_time">Time</string>
    <string name="button_tiles">Tiles</string>
    <string name="reset">Reset</string>
    <string name="reset_classic">Reset your Classic high score?</string>
    <string name="reset_time">Reset your Time high score?</string>
    <string name="reset_tiles">Reset your Tiles high score</string>
    <string name="reset_all">Reset all</string>
    <string name="reset_all_question">Reset all your Seconds and Tiles high scores?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="n_a">N/A</string>
    <string name="show_high_score">Show High Score</string>
    <string name="hide_high_score">Hide High Score</string>
    <string name="best_score">Best score:&#160;</string>
    <string name="hide">Hide</string>
    <string name="high_scores">High scores</string>
    <string name="sign_out">Sign out</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="feedback">Report a bug</string>
    <string name="mail_feedback_email" translatable="false">ivantestdev@gmail.com</string>
    <string name="mail_feedback_subject">Bug in Tap Color Tiles</string>
    <string name="mail_feedback_chooser_title">Send report</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="none">None</string>
    <string name="configure_sound">Configure sound</string>
    <string name="blue_tiles">Blue tiles</string>
    <string name="white_tiles">White tiles</string>
    <string name="could_not_open_play_store">Could not open Play Store</string>
    <string name="rate_this_app_message">You have played this game a little bit. Do you want to rate it on Google Play?</string>
    <string name="sound">Sound</string>
    <string name="colors">Colors</string>
    <string name="color_tiles">Color tiles</string>
    <string name="select_tiles_color">Select tiles color</string>
    <string name="zero" translatable="false">0</string>
    <string name="time_mode_time_10" translatable="false">10</string>
    <string name="time_mode_time_20" translatable="false">20</string>
    <string name="time_mode_time_30" translatable="false">30</string>
    <string name="time_mode_time_45" translatable="false">45</string>
    <string name="time_mode_tiles_20" translatable="false">20</string>
    <string name="time_mode_tiles_40" translatable="false">40</string>
    <string name="time_mode_tiles_60" translatable="false">60</string>
    <string name="time_mode_tiles_90" translatable="false">90</string>
    <string name="time_mode_time_placeholder">12.95 s</string>
    <string name="zero_point_zero" translatable="false">0.00</string>
    <string name="signin_other_error">Sign in error. Try again.</string>
    <string name="signin_failure">Unable to sign in.</string>
</resources>
