<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ivanzhur.tapblack.MainActivity"
    android:background="#564444" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="70dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.18">

            <View
                android:id="@+id/EmptyHeadTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/timeModeTimeTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toLeftOf="@+id/EmptyHeadTime"
                android:layout_toStartOf="@+id/EmptyHeadTime"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:text="@string/zero_point_zero"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/timeModeTilesTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textAlignment="viewEnd"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toRightOf="@id/EmptyHeadTime"
                android:layout_toEndOf="@+id/EmptyHeadTime"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:text="@string/zero"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            ads:rowCount="2"
            ads:columnCount="2">

            <Button
                android:id="@+id/TwoByTwoTopLeft"
                ads:layout_rowWeight="1"
                ads:layout_columnWeight="1"
                ads:layout_gravity="fill"
                android:layout_margin="@dimen/grid_cell_margin_big"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:background="@color/white"/>
            <Button
                android:id="@+id/TwoByTwoTopRight"
                ads:layout_columnWeight="1"
                ads:layout_gravity="fill"
                android:layout_margin="@dimen/grid_cell_margin_big"
                android:layout_marginRight="0dp"
                android:layout_marginEnd="0dp"
                android:background="@color/white"/>

            <Button
                android:id="@+id/TwoByTwoBottomLeft"
                ads:layout_rowWeight="1"
                ads:layout_gravity="fill"
                android:layout_margin="@dimen/grid_cell_margin_big"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:background="@color/white"/>
            <Button
                android:id="@+id/TwoByTwoBottomRight"
                ads:layout_gravity="fill"
                android:layout_margin="@dimen/grid_cell_margin_big"
                android:layout_marginRight="0dp"
                android:layout_marginEnd="0dp"
                android:background="@color/white"/>

        </android.support.v7.widget.GridLayout>
    </LinearLayout>

    <!-- Score screen -->
    <LinearLayout
        android:id="@+id/scoreScreenTime"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:orientation="vertical"
        android:clickable="false"
        android:background="#324529"
        android:visibility="visible">

        <TextView
            android:id="@+id/timeModeScoreTV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:gravity="center"
            android:background="@color/white"
            android:text="@string/time_mode_time_placeholder"
            android:textSize="50sp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/restartButtonTime"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@drawable/xml_ui_button_black"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/restart"
            android:onClick="restartClicked"/>

        <Button
            android:id="@+id/shareButtonTime"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@drawable/xml_ui_button_white"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/share"
            android:onClick="shareClicked"/>

        <Button
            android:id="@+id/highScoresButtonTime"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@drawable/xml_ui_button_black"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/high_scores"
            android:onClick="highScoresClicked"/>
    </LinearLayout>

    <!-- Time selection layout -->
    <android.support.v7.widget.GridLayout
        android:id="@+id/chooseModeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/showHighScoreLayout"
        ads:rowCount="6"
        ads:columnCount="2"
        android:visibility="gone">

        <Button
            android:layout_width="100dp"
            ads:layout_rowWeight="1"
            ads:layout_columnWeight="1"
            ads:layout_gravity="fill"
            android:background="@drawable/xml_ui_button_black"
            android:textColor="@color/white"
            android:text="@string/seconds"
            android:clickable="false"
            android:textSize="20sp"/>
        <Button
            android:layout_width="100dp"
            ads:layout_columnWeight="1"
            ads:layout_gravity="fill"
            android:background="@drawable/xml_ui_button_white"
            android:textColor="@color/black"
            android:text="@string/tiles"
            android:clickable="false"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/TimeChooseSeconds1"
            ads:layout_rowWeight="1"
            ads:layout_gravity="fill"
            android:background="@drawable/xml_ui_button_white"
            android:textColor="@color/black"
            android:text="@string/time_mode_time_10"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/TimeChooseTiles1"
            ads:layout_gravity="fill"
            android:background="@drawable/xml_ui_button_black"
            android:textColor="@color/white"
            android:text="@string/time_mode_tiles_20"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/TimeChooseSeconds2"
            ads:layout_rowWeight="1"
            ads:layout_gravity="fill"
            android:background="@drawable/xml_ui_button_black"
            android:textColor="@color/white"
            android:text="@string/time_mode_time_20"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/TimeChooseTiles2"
            ads:layout_gravity="fill"
            android:background="@drawable/xml_ui_button_white"
            android:textColor="@color/black"
            android:text="@string/time_mode_tiles_40"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/TimeChooseSeconds3"
            ads:layout_rowWeight="1"
            ads:layout_gravity="fill"
            android:background="@drawable/xml_ui_button_white"
            android:textColor="@color/black"
            android:text="@string/time_mode_time_30"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/TimeChooseTiles3"
            ads:layout_gravity="fill"
            android:background="@drawable/xml_ui_button_black"
            android:textColor="@color/white"
            android:text="@string/time_mode_tiles_60"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/TimeChooseSeconds4"
            ads:layout_rowWeight="1"
            ads:layout_gravity="fill"
            android:background="@drawable/xml_ui_button_black"
            android:textColor="@color/white"
            android:text="@string/time_mode_time_45"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/TimeChooseTiles4"
            ads:layout_gravity="fill"
            android:background="@drawable/xml_ui_button_white"
            android:textColor="@color/black"
            android:text="@string/time_mode_tiles_90"
            android:textSize="20sp"/>

    </android.support.v7.widget.GridLayout>

    <!-- High score buttons -->
    <FrameLayout
        android:id="@+id/showHighScoreLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:background="#564444"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/TimeResetHighScore"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/xml_ui_button_red"
                android:textColor="@color/white"
                android:text="@string/reset_all"
                android:textSize="20sp"
                android:onClick="resetHighScoreClicked"/>

            <Button
                android:id="@+id/TimeHideHighScore"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/xml_ui_button_black"
                android:textColor="@color/white"
                android:text="@string/hide"
                android:textSize="20sp"
                android:onClick="hideHighScoreClicked"/>
        </LinearLayout>

        <Button
            android:id="@+id/TimeShowHighScore"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@drawable/xml_ui_button_red"
            android:textColor="@color/white"
            android:text="@string/show_high_score"
            android:textSize="20sp"
            android:onClick="showHighScoreClicked"
            android:visibility="visible"/>

    </FrameLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
