<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rulesScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ivanzhur.tapblack.MainActivity"
    android:background="#564444">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/rulesClassicTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rules_classic"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#AAAAAA">

        <TextView
            android:id="@+id/rulesTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rules_time_a"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/rulesTilesTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rules_time_b"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:background="@drawable/xml_ui_button_green"
        android:textColor="#FFFFFF"
        android:text="@string/rate_this_app"
        android:onClick="onRateClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:background="@drawable/xml_ui_button_gray"
        android:textColor="#FFFFFF"
        android:text="@string/feedback"
        android:onClick="onFeedbackClick"/>
</LinearLayout>